--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<div style="width:600px;height:600px;background-color: #eee;position:relative;" id="field">
 			<div style="width:10px;height:10px;background-color: blue; border-radius:5px;position:absolute;top:300px;left:300px;z-index:1000" id="player">
 			</div>
-			<div style="position:absolute;bottom:0;left:0;z-index:50" id="timer"></div>
+			<div style="position:absolute;bottom:0;left:0;z-index:50" id="timer">WASD</div>
 		</div>
 		<script src="./game.js"></script>
 	</body>
