--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 			</div>
 			<div style="position:absolute;bottom:0;left:0;z-index:50" id="timer">WASD</div>
 		</div>
+		<script src="./enemy.js"></script>
 		<script src="./game.js"></script>
 	</body>
 </html>
