--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 		
 	</head>
 	<body>
-		<div style="width:600px;height:600px;background-color: #eee;position:relative;" id="field">
+		<div style="width:600px;height:600px;background-color: #eee;position:relative;border: 3px solid royalblue" id="field">
 			<div style='position:absolute;width:50px;height:50px;top:275px;left:275px;z-index:1000;' id="player">
 				<img src="whm.png" width="50px" height="50px">
 				<div style="left:20px; top:20px; width:10px;height:10px;background-color: blue; border-radius:5px; position:absolute;"></div>
 			</div>
 			<div style="position:absolute;bottom:0;left:0;z-index:50" id="timer">WASD</div>
 		</div>
+		<div><input type="checkbox" id="remove_saku" onclick="renderSaku()">極</div>
 		<script src="./enemy.js"></script>
 		<script src="./game.js"></script>
 	</body>
