--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
 	<body>
 		<div style="width:600px;height:600px;background-color: #eee;position:relative;" id="field">
 			<div style='position:absolute;width:50px;height:50px;top:275px;left:275px;z-index:1000;' id="player">
-				<img src="whm.png" width="50px" height="50px">
-				<div style="left:20px; top:20px; width:10px;height:10px;background-color: blue; border-radius:5px; position:absolute;"></div>
+				<div style="position:relative;">
+					<img src="whm.png" width="50px" height="50px">
+					<div style="position: absolute;top:-40px;display:flex;justify-content:center;width:100%">
+						<div id="sprint-buff" style="display:none">
+							<div><img src="sprint.png" width="25px" height="25px"></div>
+							<div id="sprint-buff-time" style="display:flex;justify-content:center;font-weight:bold;font-size:small">5</div>
+						</div>
+					</div>
+					<div style="left:20px; top:20px; width:10px;height:10px;background-color: blue; border-radius:5px; position:absolute;"></div>
+				</div>
 			</div>
 			<div style="position:absolute;bottom:0;left:0;z-index:50" id="timer">WASD</div>
+		</div>
+		<div id="ability">
+			<div style="position:relative;">
+				<div><img src="sprint.png" width="50px" height="50px"></div>
+				<div id="ability-sprint-time" style="position: absolute;top:0;display:flex;width:50px;height:50px;justify-content:center;align-items:flex-end;text-stroke:1px #FFF;-webkit-text-stroke: 1px #FFF"></div>
+			</div>
 		</div>
 		<script src="./enemy.js"></script>
 		<script src="./game.js"></script>
