--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div>
 		<div id="ability">
 			<div style="position:relative;">
-				<div><img src="sprint.png" width="50px" height="50px"></div>
+				<div><img src="sprint.png" width="50px" height="50px"><span>[Space]</span></div>
 				<div id="ability-sprint-time" style="position: absolute;top:0;display:flex;width:50px;height:50px;justify-content:center;align-items:flex-end;text-stroke:1px #FFF;-webkit-text-stroke: 1px #FFF"></div>
 			</div>
 		</div>
