--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		<div><select id="stage">
 			<option value="normal">ノーマル</option>
 			<option value="e7s" selected>共鳴3層</option>
+			<option value="e12s" selected>再生4層</option>
 		</select></div>
 		<select name="icon" id="playerIconSelect">
 			<option value="whm" selected>白魔道士</option>
@@ -73,6 +74,7 @@
 		<div id="leaderboard"></div>
 		<script src="./enemy.js"></script>
 		<script src="./enemy_e7s.js"></script>
+		<script src="./enemy_e12s.js"></script>
 		<script src="./game.js"></script>
 		<script src="./leaderboard.js"></script>
 		<script src="./player.js"></script>
