--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 			<div style="position:absolute;bottom:0;left:0;z-index:50" id="timer">WASD</div>
 		</div>
-		<div id="ability">
+		<div id="ability" style="display:flex;">
 			<div style="position:relative;">
 				<div><img src="img/sprint.png" width="50px" height="50px"><span>[Space]</span></div>
 				<div id="ability-sprint-time" style="position: absolute;top:0;display:flex;width:50px;height:50px;justify-content:center;align-items:flex-end;text-stroke:1px #FFF;-webkit-text-stroke: 1px #FFF"></div>
