--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<div id="sprint-buff-time" style="display:flex;justify-content:center;font-weight:bold;font-size:small">5</div>
 						</div>
 						<div id="surecast-buff" style="display:none">
-							<div><img src="img/sprint.png" width="25px" height="25px"></div>
+							<div><img src="img/surecast.png" width="25px" height="25px"></div>
 							<div id="surecast-buff-time" style="display:flex;justify-content:center;font-weight:bold;font-size:small">5</div>
 						</div>
 						<div id="holy-debuff" style="display:none">
@@ -52,7 +52,7 @@
 				<div id="ability-sprint-time" style="position: absolute;top:0;display:flex;width:50px;height:50px;justify-content:center;align-items:flex-end;text-stroke:1px #FFF;-webkit-text-stroke: 1px #FFF"></div>
 			</div>
 			<div style="position:relative;">
-				<div><img src="img/sprint.png" width="50px" height="50px"><span>[Q]</span></div>
+				<div><img src="img/surecast.png" width="50px" height="50px"><span>[Q]</span></div>
 				<div id="ability-surecast-time" style="position: absolute;top:0;display:flex;width:50px;height:50px;justify-content:center;align-items:flex-end;text-stroke:1px #FFF;-webkit-text-stroke: 1px #FFF"></div>
 			</div>
 		</div>
