--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 		<br/>
 		<div style="font-weight: bold">LeaderBoard</div>
 		<div id="leaderboard"></div>
+		<div id="copyright">(C) SQUARE ENIX CO., LTD. All Rights Reserved.</div>
 		<script src="./enemy.js"></script>
 		<script src="./enemy_e7s.js"></script>
 		<script src="./enemy_e12s.js"></script>
