絶竜詩戦争: 堕天のドラゴンダイブ

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 		<div><input type="checkbox" id="remove_saku" onclick="renderSaku()">極</div>
 		<div><select id="stage">
 			<option value="normal">ノーマル</option>
-			<option value="e7s" selected>共鳴3層</option>
-			<option value="e12s" selected>再生4層</option>
+			<option value="e7s">共鳴3層</option>
+			<option value="e12s">再生4層</option>
+			<option value="dwu" selected>堕天のドラゴンダイブ</option>
 		</select></div>
 		<select name="icon" id="playerIconSelect">
 			<option value="whm" selected>白魔道士</option>
@@ -84,9 +85,10 @@
 		<script src="./enemy.js"></script>
 		<script src="./enemy_e7s.js"></script>
 		<script src="./enemy_e12s.js"></script>
+		<script src="./enemy_dwu.js"></script>
 		<script src="./game.js"></script>
-		<script src="./leaderboard.js"></script>
 		<script src="./player.js"></script>
+		<script src="./util.js"></script>
 		<script>afterEverythingLoaded();</script>
 	</body>
 </html>
