踊り子、ガンブレ、リーパー、賢者のアイコンを追加

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
 			<option value="mnk">モンク</option>
 			<option value="rdm">赤魔道士</option>
 			<option value="sam">侍</option>
+			<option value="dnc">踊り子</option>
+			<option value="gnb">ガンブレイカー</option>
+			<option value="rpr">リーパー</option>
+			<option value="sge">賢者</option>
 		</select>
 		<br/>
 		<div style="font-weight: bold">LeaderBoard</div>
