--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
 				<option value="3_south">Ⅲ 南</option>
 				<option value="3_west">Ⅲ 西</option>
 			</select>
+			<select id="timeSpeed" onchange="window.localStorage.setItem('timeSpeed', this.selectedIndex);Time.setTimeSpeed(Number(this.value));">
+				<option value="5">x5.0</option>
+				<option value="3">x3.0</option>
+				<option value="2">x2.0</option>
+				<option value="1.5">x1.5</option>
+				<option value="1.2">x1.2</option>
+				<option value="1" selected="selected">通常速度 (x1.0)</option>
+				<option value="0.8">x0.8</option>
+				<option value="0.5">x0.5</option>
+			</select>
 		</div>
 		<select name="icon" id="playerIconSelect">
 			<option value="whm" selected>白魔道士</option>
@@ -111,6 +121,7 @@
 		<div style="font-weight: bold">LeaderBoard</div>
 		<div id="leaderboard"></div>
 		<div id="copyright">(C) SQUARE ENIX CO., LTD. All Rights Reserved.</div>
+		<script src="./time.js"></script>
 		<script src="./enemy.js"></script>
 		<script src="./enemy_e7s.js"></script>
 		<script src="./enemy_e12s.js"></script>
