establish p2p connection using webrtc

--- a/index.html
+++ b/index.html
@@ -3,24 +3,6 @@
 		
 	</head>
 	<body>
-		<!-- Firebase -->
-		<script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
-		<script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-firestore.js"></script>
-
-		<script>
-			// Your web app's Firebase configuration
-			var firebaseConfig = {
-				apiKey: "AIzaSyCDPq5eSwR7iBljLqixnKVd74ODiPIcufI",
-				authDomain: "ff14-no-game-score.firebaseapp.com",
-				databaseURL: "https://ff14-no-game-score.firebaseio.com",
-				projectId: "ff14-no-game-score",
-				storageBucket: "ff14-no-game-score.appspot.com",
-				messagingSenderId: "559219615292",
-				appId: "1:559219615292:web:31210fa03c606b8f7a8539"
-			};
-			// Initialize Firebase
-			firebase.initializeApp(firebaseConfig);
-		</script>
 		<div style="width:600px;height:600px;background-color: #eee;position:relative;border: 3px solid royalblue" id="field">
 			<div style='position:absolute;width:50px;height:50px;top:275px;left:275px;z-index:1000;' id="player">
 				<div style="position:relative;">
@@ -117,9 +99,12 @@
 			<option value="rpr">リーパー</option>
 			<option value="sge">賢者</option>
 		</select>
+		<div id="multiplay">
+			<input id="multiplay-name" type="text">
+			<input id="multiplay-join" type="button" value="Join">
+			<input id="multiplay-leave" type="button" value="Leave">
+		</div>
 		<br/>
-		<div style="font-weight: bold">LeaderBoard</div>
-		<div id="leaderboard"></div>
 		<div id="copyright">(C) SQUARE ENIX CO., LTD. All Rights Reserved.</div>
 		<script src="./time.js"></script>
 		<script src="./enemy.js"></script>
@@ -129,6 +114,7 @@
 		<script src="./game.js"></script>
 		<script src="./player.js"></script>
 		<script src="./util.js"></script>
+		<script type="module" src="./multi.js"></script>
 		<script>afterEverythingLoaded();</script>
 	</body>
 </html>
