--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 				<option value="e12s">再生4層</option>
 				<option value="dwu">堕天のドラゴンダイブ</option>
 				<option value="eyes">邪竜の両眼</option>
-				<option value="ws" selected>至天の陣：風槍</option>
+				<option value="ws">至天の陣：風槍</option>
+				<option value="shikoku" selected>至天の陣：死刻</option>
 			</select>
 			<select id="dwu_job" onchange="window.localStorage.setItem('dwu_job', this.selectedIndex)">
 				<option value="Warrior">戦士</option>
@@ -166,6 +167,7 @@
 		<script src="./enemy_dwu.js"></script>
 		<script src="./enemy_eyes.js"></script>
 		<script src="./enemy_ws.js"></script>
+		<script src="./enemy_shikoku.js"></script>
 		<script src="./game.js"></script>
 		<script src="./player.js"></script>
 		<script type="module" src="./multi.js"></script>
